--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
 
 dependencies {
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -61,4 +66,8 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+
+    //Youtube player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    apply plugin: 'kotlin-kapt'
 }
